Add filter to link listing
